[package]
name = "rs_blockchain"
version = "0.1.1"
authors = ["Pavlos Efstathiou"]
edition = "2018"
license = "MIT"
description = "Blockchain in Rust."
readme = "README.MD"
repository = "https://github.com/Pavlos-Efstathiou/Rust-Blockchain/" 
exclude = [
    ".vscode/*"
]
[dependencies]
sha2 = "0.9.5"
serde_json = "1.0.64"
serde = { version = "1.0.126", optional = true , features = ["derive"] }
chrono = "0.4"
regex = "1"

[features]
default = ["std"]
std = [
    "serde"
]
