[package]
name = "rs_blockchain"
version = "0.2.3"
authors = ["Pavlos Efstathiou"]
edition = "2018"
license = "MIT"
description = "A simple Rust Blockchain library"
readme = "README.MD"
homepage = "https://github.com/Pavlos-Efstathiou/Rust-Blockchain/"
repository = "https://github.com/Pavlos-Efstathiou/Rust-Blockchain/" 
keywords = ["blockchain", "crypto", "currency", "github", "open-source"]
exclude = [
    ".vscode/",
    ".github/"
]

[dependencies]
sha2 = "0.9.5"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
regex = "1"